syntax = "proto3";

message Message {

  // 协议头
  Header header = 1;

  // 消息体
  Body body = 2;
}

message Header {

  // 消息魔数，固定值
  int32 magic = 1;

  // 命令 id
  int32 cmdId = 2;

  // 消息体长度
  int32 bodyLength = 3;

  // 版本号
  int32 version = 4;

  // 数据解析类型，json/protobuf/...
  int32 objectType = 5;

  // 客户端类型
  int32 clientType = 6;
}

message Body {

  // 发送方 id
  string userId = 1;

  // 业务 id
  int32 appId = 2;

  // 接收方 id
  string toId = 3;

  // 消息 id，一般不由客户端传递
  string msgId = 4;

  // 业务指令 id
  int32 cmdId = 5;

  int32 msgType = 6;

  // 消息包内容
  bytes data = 7;
}